2005-02-27  Philippe Gerum  <rpm@xenomai.org>

	* testsuite/switch/switch.c (main): Add missing mlockall().

2005-02-25  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* TROUBLESHOOTING (SMI): Add a section for SMI workaround.

	* configure.in, Kconfig: Allow kernel built ouside their source 
	tree to be used. The configure and Kconfig parameter is the 
	kernel build tree root.

	Fix architecture tuning flags determination for that case.

	Remember CROSS_COMPILE value across configure invocations.

	Allow linux-dir to be passed as a relative path.

2005-02-24  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/timer.c (xntimer_do_timers): Check whether
	xntimer_do_timers is run on CPU XNTIMER_KEEPER_ID in
	the OPT_PERCPU_TIMER case before updating the pod wallclock
	(revert the change made on 2005-01-17 and clarify comment).

2005-02-24  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Make sure we can use ~luser when specifying
	linux-dir or --module-dir.

	* arch/i386/hal/hal.c (faults_read_proc): Add proc entry to
	display faults occurring in real-time mode. This is an attempt to
	provide more debugging info to chase spurious latencies induced by
	fault recovery.

2005-02-24 Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* nucleus/timer.c (xntimer_set_sched): Remove superfluous check
	for timer remoteness.
	
2005-02-24  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_do_timers): Dequeue an elapsed timer
	before calling its handler, so that xntimer_stop() called on
	behalf of the latter won't attempt to stop it uselessly
	(e.g. xnpod_resume_thread()).
	(xntimer_do_timers): Update the reference time inside the inner
	processing loop for aperiodic support.

	* nucleus/shadow.c: Add support for switch back syscall mode,
	resetting the original exec mode for the caller after a switch has
	been made to process the syscall.

	* nucleus/pod.c: Move consistency checks to (OPT_DEBUG || SIM)
	sections.
